<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LegoGroup3v2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="acc">Accuracy</string>
    <string name="bear">Bearing</string>
    <string name="speed">Speed</string>
    <string name="extra">Additional</string>
    <string name="na">n/a</string>
    <string name="dlat">Dest.Lat.</string>
    <string name="dlon">Dest.Lon.</string>
    <string name="problem_at_closing">Problem at closing</string>
    <string name="pairing_message">Pairing</string>
    <string name="no_paired_nxt">No paired NXT</string>
    <string name="current_position">Current position</string>
    <string name="robot_type_lejos">Robot Type</string>
    <string name="bt_error_dialog_title">Error</string>
    <string name="bt_error_dialog_message">Error happend</string>
    <string name="connecting_please_wait">Connecting...</string>
    <string name="title_activity_settings">Settings</string>


</resources>
